fix card margin alignment in mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -222,6 +222,25 @@ display: flex;
   
 }
 
+@media only screen and (max-width: 600px) {
+  .slider {
+    margin-top: 30px;
+    align-items: center;
+    align-content: center;
+
+  }
+}
+/* For devices with screen width between 600px and 900px */
+@media only screen and (min-width: 600px) and (max-width: 900px) {
+  .slider {
+    margin-top: 30px;
+    align-items: center;
+    align-content: center;
+}
+}
+
+
+
 
 .item {
   flex-basis: 300px;
